# conan-cmake-demo

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  demo.cpp
test/: condition_test.cpp  gtest.cpp
